@@ -2,7 +2,7 @@
 
 	// DO NOT REMOVE OR CHANGE THESE 3 LINES:
 define('TYPO3_MOD_PATH', '../typo3conf/ext/tc_beuser/mod2/');
-$BACK_PATH = '../../../../typo3/';
+$BACK_PATH='../../../../typo3/';
 $MCONF['name'] = 'txtcbeuserM1_txtcbeuserM2';
 
 	
